# clokr-nfc

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  main.rs  tray.rs
src-tauri/src/api/: mod.rs  queue.rs
src-tauri/src/nfc/: debounce.rs  mod.rs
src/lib/: Settings.svelte
